
* ENHANCEMENTS:
  * Added Target Next / Previous hot keys and Actions.  Now you can switch targets without having to click on the Radar!
  * Numerous missile tuning tweaks to improve flight profile appearances and improve config consistency.
  * Add slider to adjust Eject Velocity of Chaff and flares in Editor.
  * Revised Jet engine sound (much better now)


v1.2.1.2
* FIXES
  * Correct Radar display missing graphics when using low quality graphics Git Issue #516.
  * Correct tracer display missing graphics when using low quality graphics.  Git Issue #520.
  * Correct automatic resizing of WingCommander Window
  * Reintroduce BDAcUniversalAmmoBox Module Manager config file.  Somehow was dropped during a merge somewhere back.
  * Separate RWR operation from RWR display.  RWR should be enabled at all times when a Radar is installed on craft. 
    - Opening and closing the RWR window now leaves RWR operation active.  Git Issues 410, #411, #461
  * removed part configs for the AGM86-ruise an the RBS-15  They have been broken, and are superceded by improved weapons.

* ENHANCEMENTS:
  * Increase the limits of the Radar and RWR window scaling to allow for larger windows.  
    - Add min and max settings to the settings.cfg to allow user defined limits. Git Issue #521
  * Add mouse driven RWR and Radar windows resizing.  Now you can intuitivly resize by mouse.  Click an drag the lower right corner.
  * Redesigned Targeting Cam window to incorporate all features added to the Radar window - resizing, boundary checks, mouse resize, relocate buttons
  * Retune BDAc missiles to improve characteristics, performance, and balance.  Tuning performed by Kergan


v1.2.1.1
* NEW FEATURES:
  * Added ModuleSpaceRadar.  This limits use of space based radars supporting this module to outside the atmosphere. By DoctorDavinci and Kergan
  * Added Air to ground versions of Air to Air radars.  By SpannerMonkey(smce)
  * Added new explosion effects.  By SpanerMonkey(smce)

* ENHANCEMENTS: