@@ -70,6 +70,8 @@ BDAInputSettings
 	RADAR_RANGE_UP = 
 	RADAR_RANGE_DN = 
 	RADAR_CYCLE_LOCK = 
-    RADAR_TARGET_NEXT =
+    RADAR_TARGET_NEXT = 
     RADAR_TARGT_PREV = 
+    VS_SWITCH_NEXT = [page up]
+    VS_SWITCH_PREV = [page down]
 }
